--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,40 @@
+*{
+    padding: 0;margin: 0;box-sizing: border-box;
+}
 
 
-main{
-    height: 500px;
-    background-color: pink;
+aside{
+    width: 100px;
 }
 
 .sidebar{
-    overflow: hidden;
-    width: 25%;
+    width: 100px;
     background-color: red;
-    height: 100%;
+    height: 900px;
+
+}
+
+
+
+
+.sidebar-top{
+    height: 100px;
+    background-color: orange;
+}
+
+.sidebar-list{
+    margin-top: 20px;
+    padding: 0 10px;
+}
+
+.sidebar-list li{
+    list-style: none;
+    padding: 5px 0;
+}
+
+.sidebar-bottom{
+    height: 100px;
+    display: flex;
+    justify-content: end;
+    background-color: green;
 }
