--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,15 @@ body{
     background-color: #f9f9fa;
 }
 
+header {
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+}
+
+main{
+    padding-top: 55px;
+}
 
 
 aside{
@@ -24,6 +33,12 @@ aside{
 
 .sidebar-top{
     height: 100px;
+}
+
+.sidebar-bottom{
+    height: 100px;
+    display: flex;
+    align-items: flex-end;
 }
 
 
