--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,14 @@ aside{
 
 
 .sidebar-top{
-    height: 100px;
+    height: calc(100% - 100px);
 }
 
 .sidebar-bottom{
     height: 100px;
     display: flex;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
 }
 .sidebar-list ul{
     
@@ -49,6 +50,10 @@ aside{
 .sidebar-list li{
     list-style: none;
     padding: 5px 0;
+}
+
+.sidebar-list li:hover{
+    background-color: gray;
 }
 
 .sidebar-list a{
