--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 *{
-    padding: 0;margin: 0;box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -7,14 +9,10 @@ body{
 }
 
 header {
-    position: fixed;
     width: 100%;
     z-index: 999;
 }
 
-main{
-    padding-top: 55px;
-}
 
 
 aside{
@@ -22,7 +20,7 @@ aside{
 }
 
 .sidebar{
-    max-width: 150px;
+    max-width: 100px;
     background-color: #12283e;
     background-image: url(../img/sidebar-bg.png);
 
@@ -32,22 +30,20 @@ aside{
 
 
 .sidebar-top{
-    height: calc(100% - 100px);
+    height: 60%;
 }
 
 .sidebar-bottom{
-    height: 100px;
+    height: 40%;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 .sidebar-list ul{
-    
     padding: 10px 10px;
 }
 
 
-.sidebar-list li{
+.sidebar li{
     list-style: none;
     padding: 5px 0;
 }
@@ -68,8 +64,8 @@ aside{
 .content{
     width: calc(100% - 100px);
 
-
 }
+
 .main-start{
     background-color: #1d72e8;
     
@@ -90,6 +86,26 @@ aside{
     max-width: 30px;
     border-radius: 50%;
 }
+
+.ms-bg-pill{
+    background-color: #185bbb;
+}
+
+/* Responsive */
+
+@media screen and (max-width: 992px) {
+
+    aside{
+        width: 60px;
+    }
+
+    .content{
+        width: 100%;
+    }
+  
+}
+
+
 
 
 
